--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>hello, world</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title></title>
+    </head>
+    <body>
+        <h1>hello, world</h1>
+        <p>call me ishmael</p>
+        <p>mamador de pipí</p>
+    </body>
+</html>
