More things added to the page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="utf-8">
         <title>A whale of a greeting</title>
     </head>
     <body>
-        <h1>hello, world</h1>
-        <p>call me ishmael</p>
-        <p>mamador de pipí</p>
+        <img src="images/world.png" alt="An Earth-like world globe. In the pixel art style.">
+        <h1 class="big-title">hello, <strong>world</strong></h1>
+        <p>you can:</p>
+        <ol>
+            <li>call me <a href="https://en.wikipedia.org/wiki/Moby-Dick">ishmael</a></li>
+            <li>no hablar de mí</li>
+            <li>porque en la boca tengo tu pipí</li>
+        </ol>
     </body>
 </html>
