Finish Mozilla Stuff

--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
+        <link href="styles/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <title>A whale of a greeting</title>
     </head>
     <body>
-        <img src="images/world.png" alt="An Earth-like world globe. In the pixel art style.">
-        <h1 class="big-title">hello, <strong>world</strong></h1>
+        <img src="images/Space-Background.png" alt="An Earth-like world globe. In the pixel art style." id="world">
+        <h1 class="big-title">hello, world</h1>
         <p>you can:</p>
         <ol>
-            <li>call me <a href="https://en.wikipedia.org/wiki/Moby-Dick">ishmael</a></li>
+            <li>call me <a href="https://en.wikipedia.org/wiki/Moby-Dick.">ishmael</a></li>
             <li>no hablar de mí</li>
             <li>porque en la boca tengo tu pipí</li>
         </ol>
+        <button id="myButton">Change user</button>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
